--- a/src/ods.ui
+++ b/src/ods.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1099</width>
-    <height>573</height>
+    <width>1100</width>
+    <height>465</height>
    </rect>
   </property>
   <property name="palette">
@@ -80,7 +80,7 @@
   <widget class="QLineEdit" name="lineEdit_9">
    <property name="geometry">
     <rect>
-     <x>280</x>
+     <x>350</x>
      <y>190</y>
      <width>241</width>
      <height>23</height>
@@ -98,16 +98,6 @@
    </property>
    <property name="text">
     <string>Usuario Afectado</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="txtCreadoPor">
-   <property name="geometry">
-    <rect>
-     <x>620</x>
-     <y>130</y>
-     <width>221</width>
-     <height>23</height>
-    </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_12">
@@ -128,7 +118,7 @@
     <rect>
      <x>10</x>
      <y>370</y>
-     <width>1061</width>
+     <width>1081</width>
      <height>83</height>
     </rect>
    </property>
@@ -146,23 +136,10 @@
     <string>Orden de Servicio</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_5">
-   <property name="geometry">
-    <rect>
-     <x>620</x>
-     <y>110</y>
-     <width>111</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Creado Por</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>300</x>
+     <x>320</x>
      <y>110</y>
      <width>111</width>
      <height>16</height>
@@ -172,23 +149,10 @@
     <string>Fecha Apertura</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>460</x>
-     <y>110</y>
-     <width>111</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Fecha Cierre</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_11">
    <property name="geometry">
     <rect>
-     <x>240</x>
+     <x>310</x>
      <y>170</y>
      <width>121</width>
      <height>16</height>
@@ -198,22 +162,12 @@
     <string>Area de Incidente</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="txtReportadoPor">
-   <property name="geometry">
-    <rect>
-     <x>850</x>
-     <y>130</y>
-     <width>221</width>
-     <height>23</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QComboBox" name="cbxEstado">
    <property name="geometry">
     <rect>
      <x>140</x>
      <y>130</y>
-     <width>151</width>
+     <width>171</width>
      <height>23</height>
     </rect>
    </property>
@@ -237,7 +191,7 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>570</x>
+     <x>640</x>
      <y>170</y>
      <width>111</width>
      <height>16</height>
@@ -247,20 +201,10 @@
     <string>Organizacion</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="txtAfectado">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>190</y>
-     <width>221</width>
-     <height>23</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>850</x>
+     <x>830</x>
      <y>110</y>
      <width>111</width>
      <height>16</height>
@@ -298,7 +242,7 @@
     <rect>
      <x>10</x>
      <y>310</y>
-     <width>1061</width>
+     <width>1081</width>
      <height>23</height>
     </rect>
    </property>
@@ -306,51 +250,19 @@
   <widget class="QLineEdit" name="lineEdit_10">
    <property name="geometry">
     <rect>
-     <x>610</x>
+     <x>680</x>
      <y>190</y>
      <width>151</width>
      <height>23</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnCombo">
+  <widget class="QDateTimeEdit" name="txtFechaApertura">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>520</y>
-     <width>89</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>PushButton</string>
-   </property>
-  </widget>
-  <widget class="QDateTimeEdit" name="dateTimeEdit">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
+     <x>320</x>
      <y>130</y>
-     <width>151</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="wrapping">
-    <bool>false</bool>
-   </property>
-   <property name="displayFormat">
-    <string>dd/MM/yyyy HH:mm</string>
-   </property>
-   <property name="calendarPopup">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QDateTimeEdit" name="dateTimeEdit_2">
-   <property name="geometry">
-    <rect>
-     <x>460</x>
-     <y>130</y>
-     <width>151</width>
+     <width>171</width>
      <height>23</height>
     </rect>
    </property>
@@ -367,7 +279,7 @@
   <widget class="QLineEdit" name="lineEdit_13">
    <property name="geometry">
     <rect>
-     <x>240</x>
+     <x>310</x>
      <y>190</y>
      <width>41</width>
      <height>23</height>
@@ -377,7 +289,7 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>520</x>
+     <x>590</x>
      <y>190</y>
      <width>31</width>
      <height>23</height>
@@ -394,7 +306,7 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>760</x>
+     <x>830</x>
      <y>190</y>
      <width>31</width>
      <height>23</height>
@@ -411,7 +323,7 @@
   <widget class="QLineEdit" name="lineEdit_16">
    <property name="geometry">
     <rect>
-     <x>570</x>
+     <x>640</x>
      <y>190</y>
      <width>41</width>
      <height>23</height>
@@ -421,7 +333,7 @@
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>990</x>
+     <x>1060</x>
      <y>190</y>
      <width>31</width>
      <height>23</height>
@@ -438,7 +350,7 @@
   <widget class="QLabel" name="label_16">
    <property name="geometry">
     <rect>
-     <x>800</x>
+     <x>870</x>
      <y>170</y>
      <width>111</width>
      <height>16</height>
@@ -451,7 +363,7 @@
   <widget class="QLineEdit" name="lineEdit_17">
    <property name="geometry">
     <rect>
-     <x>840</x>
+     <x>910</x>
      <y>190</y>
      <width>151</width>
      <height>23</height>
@@ -461,7 +373,7 @@
   <widget class="QLineEdit" name="lineEdit_18">
    <property name="geometry">
     <rect>
-     <x>800</x>
+     <x>870</x>
      <y>190</y>
      <width>41</width>
      <height>23</height>
@@ -599,7 +511,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1101</width>
+     <width>1291</width>
      <height>61</height>
     </rect>
    </property>
@@ -1148,16 +1060,211 @@
      <normaloff>../img/30px_1 (514).png</normaloff>../img/30px_1 (514).png</iconset>
    </property>
   </widget>
+  <widget class="QLabel" name="lblCreadoPor">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>110</y>
+     <width>111</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Creado Por</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtIdCreadoPor">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>130</y>
+     <width>41</width>
+     <height>23</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnCreadoPor">
+   <property name="geometry">
+    <rect>
+     <x>760</x>
+     <y>130</y>
+     <width>31</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../img/user-6-16.png</normaloff>../img/user-6-16.png</iconset>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtCreadoPor">
+   <property name="geometry">
+    <rect>
+     <x>540</x>
+     <y>130</y>
+     <width>221</width>
+     <height>23</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnReportadoPor">
+   <property name="geometry">
+    <rect>
+     <x>1060</x>
+     <y>130</y>
+     <width>31</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../img/user-6-16.png</normaloff>../img/user-6-16.png</iconset>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtIdReportadoPor">
+   <property name="geometry">
+    <rect>
+     <x>800</x>
+     <y>130</y>
+     <width>41</width>
+     <height>23</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtReportadoPor">
+   <property name="geometry">
+    <rect>
+     <x>840</x>
+     <y>130</y>
+     <width>221</width>
+     <height>23</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnAfectado">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>190</y>
+     <width>31</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../img/user-6-16.png</normaloff>../img/user-6-16.png</iconset>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtAfectado">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>190</y>
+     <width>221</width>
+     <height>23</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtIdAfectado">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>190</y>
+     <width>41</width>
+     <height>23</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QDateTimeEdit" name="txtFechaModificacion">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>250</y>
+     <width>151</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="wrapping">
+    <bool>false</bool>
+   </property>
+   <property name="displayFormat">
+    <string>dd/MM/yyyy HH:mm</string>
+   </property>
+   <property name="calendarPopup">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>230</y>
+     <width>141</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Fecha Modificacion</string>
+   </property>
+  </widget>
+  <widget class="QDateTimeEdit" name="txtFechaCierre">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>790</x>
+     <y>250</y>
+     <width>151</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="wrapping">
+    <bool>false</bool>
+   </property>
+   <property name="displayFormat">
+    <string>dd/MM/yyyy HH:mm</string>
+   </property>
+   <property name="calendarPopup">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>790</x>
+     <y>230</y>
+     <width>141</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Fecha Cierre</string>
+   </property>
+  </widget>
  </widget>
  <tabstops>
-  <tabstop>btnCombo</tabstop>
+  <tabstop>btnNuevo</tabstop>
+  <tabstop>btnModificar</tabstop>
+  <tabstop>btnEliminar</tabstop>
+  <tabstop>btnDeshacer</tabstop>
+  <tabstop>btnLimpiar</tabstop>
+  <tabstop>btnSalir</tabstop>
   <tabstop>lineEdit</tabstop>
   <tabstop>cbxEstado</tabstop>
-  <tabstop>dateTimeEdit</tabstop>
-  <tabstop>dateTimeEdit_2</tabstop>
+  <tabstop>txtFechaApertura</tabstop>
+  <tabstop>txtIdCreadoPor</tabstop>
   <tabstop>txtCreadoPor</tabstop>
-  <tabstop>txtReportadoPor</tabstop>
-  <tabstop>txtAfectado</tabstop>
+  <tabstop>btnCreadoPor</tabstop>
   <tabstop>lineEdit_13</tabstop>
   <tabstop>lineEdit_9</tabstop>
   <tabstop>pushButton</tabstop>
